---------------------------------------------------------------------------------------------------
Version: 0.32.00
Date: 02.08.2025
  Bugfixes:
    - There was a problem with the synchronization of the multiplayer game when joining as a non-host player.
    - Mod ignores enitites builded by script (for example: inserters were not be pushed to event queue).
    - Mod loss quality modifier for fuel with.
    - Mod loss quality with spilling items from containers.
  Changes:
    - Deleted: Code for [apm_starfall]. No longer supported.
    - Deleted: Code for [apm_recycling]. No longer supported.
    - Deleted: Code for apm's offshore pumps. With 2.0 it became legacy.
    - Rewrited: New double linked list based walker for inserters. Now used dllist to handle inserters queue.
    - Added: The burner isnerters now try find fuel from pickup entity or try use helded suitable fuel when it's out of fuel.
---------------------------------------------------------------------------------------------------
Version: 0.31.19
Date: 02.08.2025
  Bugfixes:
    - Fixed multiplayer error with command register action.
---------------------------------------------------------------------------------------------------
Version: 0.31.18
Date: 31.07.2025
  Features:
    - [apm.lib.utils.entity.set.hidden] Hide entity
---------------------------------------------------------------------------------------------------
Version: 0.31.17
Date: 31.07.2025
  Features:
    - [apm.lib.utils.entity.get.by_name] Find entity by name and group
    - [apm.lib.utils.entity.del.next_upgrade] Remove next_upgrade for selected entity
---------------------------------------------------------------------------------------------------
Version: 0.31.16
Date: 02.05.2025
  Features:
    - [apm.lib.utils.recipe.category.exists] Check recipe category
  Bugfixes:
    - [apm.lib.utils.assembler.add.crafting_categories] Can gracefully handle non-existing recipe category.