@@ -4,6 +4,7 @@ apm_lib_player_items=Startup player items
 apm_lib_inserter_functions=Extended functions for inserter
 apm_lib_inserter_iterations_01759=- Maximum inserter checks per tick
 apm_lib_inserter_valid_targets=- Valid prototype targets
+apm_lib_inserter_ash_chaining=- Extended chaining for ash
 apm_lib_storage_spit_out=Destroyed storage spit out items
 apm_lib_storage_spit_out_mark_deconstruct=- Mark items from destroyed container for deconstruction
 apm_lib_radiation_dmg=Radiation damage
@@ -17,6 +18,7 @@ apm_lib_burner_equipment_alerts_sound=Play equipment alerts sounds
 [mod-setting-description]
 apm_lib_inserter_iterations_01759=Here you can set the maximum of how many inserters per tick should be checked by the script. This is important for the ability of the inserters to check and clear burned-fuel-inventorys on machines, chain fuel through machineries and for burner-inserter to pick up fuel from the pickup and drop targets for them self. (Default is 15 per tick -> 900 inserters/s)
 apm_lib_inserter_valid_targets=List of prototypes, separated by commas, that can have a burner energy source with a burnt fuel inventory (car and locomotive doesn't need to be in this list, thy are handelt by the base game)
+apm_lib_inserter_ash_chaining=If the option enabled inserters can put ash from pickup target (or from self) to drop target, if it possible. The valid placement - burnt result inventory only.
 apm_lib_storage_spit_out=This option controls if the inventory of destroyed storage containers should spit items out on the ground.
 apm_lib_storage_spit_out_mark_deconstruct=Ensures that construction bots can collect them immediately.
 apm_lib_radiation_dmg=If activated, the character will be slightly damaged if it has a radioactive item in inventory or in hand.
